--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <br>My work focuses on modern .NET development, cloud-ready architecture, secure API integration, and practical system design. 
                         <br>I combine hands-on engineering expertise with architectural thinking to deliver reliable, high-quality software solutions.
                     <br>
-                    <br>I am a graduate of <a href="https://myaolcc.com/" target="_blank">Academy of Learning Career College</a>’s Software Developer Boot Camp, and trained and experienced in the following web and programming languages: HTML, CSS, JavaScript, SQL, C# and more. 
+                    <br>I am currently studying at <a href="https://myaolcc.com/" target="_blank">Academy of Learning Career College</a>'s Software and Web Developer course, and trained and experienced in the following web and programming languages: HTML, CSS, JavaScript, SQL, C# and more. 
                     <br>
                     <br>I am a full-stack developer and would love to work with you on your project. <a href="#Contact">Contact</a> me below!
                 </p>
