--- a/index.html
+++ b/index.html
@@ -6,11 +6,20 @@
         <meta name="viewport" content="width=device-width" />
         <title>Rexel Cartalla</title>
         <link rel="stylesheet" type="text/css" href="stylesheet/portfolio.css">
+
+        <script>
+            function submit_form() {
+            document.formu1.submit();
+            document.formu1.reset(); 
+        }
+        </script>
     </head>
 
     <!--Body-->
     <body class="Background">
+
         
+
         <!--Navbar-->
         <div class="Navbar">
             <a class="active" href="#Home">Home</a>
@@ -92,14 +101,15 @@
             <div class="Column_1 Column_tall"  style="padding-top: 1%;">
                 <h1>Contact</h1>
                 <!--This specifies where and how to send the form data; we are leaving it blank-->
-                <form action="https://formspree.io/f/xvzbglnn" method="POST"> <!-- Here we are utilizing a 3rd party service to submit the contact form data, insert your formspree endpoint in the action attribute -->
+                <form name="formu1" action="https://formspree.io/f/xvzbglnn" method="POST"> <!-- Here we are utilizing a 3rd party service to submit the contact form data, insert your formspree endpoint in the action attribute -->
                     <label>Name:</label>
                         <input type="text" id="Name" name="Name" placeholder="Name" required>
                     <label>Email:</label>
                         <input type="text" id="Email" name="Email" placeholder="E-mail address" required>
                     <label>Message:</label>
                         <input type="text" id="Message" name="Message" placeholder="Message" required>
-                        <input type="submit" value="SUBMIT">
+                        <input type="submit" value="SUBMIT" onclick="submit_form();" />
+                         <!-- <input type="button" value="Send" onclick="submit_form();" /> -->
                 </form>
             </div>
         </div>
@@ -111,5 +121,12 @@
                 <br>
             </p>
         </footer>
+
+        <!-- Optional JavaScript -->
+        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
     </body>
 </html>
